--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 /* Common style containers & panels */
 
-    .container{
+.container{
         padding-top: 50px;
 
     }
@@ -14,11 +14,18 @@
     height: 20em;
 }
 
-.row{padding-top: 150px;}
+.row {
+    margin-top: 150px;
+}
 
 /* Navbar */
 
 /* Logo */
+
+[class*="col-"]{
+    background-color: thistle;
+    border: 2px solid black;
+}
 
 /* Gallery menu items */
 
@@ -27,12 +34,8 @@
     flex-wrap: wrap;
     padding: 0 4px;
   }
-
-.img{
-    width: 50%;
-}
   
-  /* Create four equal columns that sits next to each other */
+        /* Create four equal columns that sits next to each other */
   .column {
     flex: 25%;
     max-width: 25%;
@@ -73,4 +76,28 @@
     background-size: cover;
     background-repeat: no-repeat;
 
+}
+
+/* Carousel */
+
+#Carousel .item{
+    position: relative;
+    top: 100px;
+    height: 800px;
+    background-color: white;
+   
+}
+
+.item img {
+    position: relative;
+    margin: 0 auto;
+    width: 50%;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+
+}
+
+.carousel-control{
+    color: black;
 }
