--- a/style.css
+++ b/style.css
@@ -1,103 +1,214 @@
 
-/* Common style containers & panels */
+/* Color blue: 00A4D0 - brown: #311D17 - davisgrey: 605856 orange E86252 - lightgrey: D0CCD0*/
+
+/* Common */
 
 .container{
-        padding-top: 50px;
+    position: relative;
+    top: 3em;
+ 
+}
 
+[class*="fa-"] {color: #605856;}
+
+
+/* Navbar & Logo */
+
+.navbar-brand > img{
+    position: relative;
+    top: -35px;
+    width: 15%;
     }
-.panel-default{
-    margin-top: 3em;
+
+.navbar-nav > li a{
+    color: #00A4D0;
+    font-size: 1.2em;
+    padding-right: 3em;
+    padding-top: 0;
 }
 
-.panel-body{
-    background-color: lightpink;
-    height: 20em;
+
+/* Home page Jumbotron */
+
+.jumbotron {
+    background-color: white;  
+    background-image: url(images/welcome/resto_inside_pic.jpg);
+    background-size: cover;
+    height: 768px;
 }
 
-.row {
-    margin-top: 150px;
+.banner > img{
+    width: 20%;
+    background-color: rgb(255, 255, 255, 0.85);
 }
 
-/* Navbar */
-
-/* Logo */
-
-[class*="col-"]{
-    background-color: thistle;
-    border: 2px solid black;
+.mx-5, .pt-3 {
+    color: white;
+    padding: 2em 6em 2em 6em;
+    padding-left: 6em;
+    padding-right: 6em;
+    padding-top: 2em;
 }
 
-/* Gallery menu items */
+.h1-responsive {
+    padding: 1em 0em 0em 0em;
+    margin: 0em;
+    color: white;
+}
 
-.row {
+
+.jumbotron .btn{
+    background-color: #00A4D0;
+    border-radius: 50px;
+    color: white;
+    padding: 12px 28px;
+    text-align: center;
+    font-size: 20px;
+    opacity: 1;
+    
+}
+
+.jumbotron .btn:hover{
+    background-color: #00A4D0;
+}
+
+/* Menu Page Group-list & Badges*/
+
+#menupage .panel-default{
+    margin-top: 1em;  
+    border: none;
+}
+
+.badge-pill {
+    padding: 7px;
+    font-size: 12px;
+    color: #E86252;
+    background-color: white;
+}
+
+  
+#menupage .row {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
   }
   
-        /* Create four equal columns that sits next to each other */
-  .column {
+    /* Menu Gallery: create four equal columns that sits next to each other */
+#menupage .column {
     flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
-  }
-  
-  .column img {
+    max-width: 20%;
+    padding: 0 4px; 
+}
+
+.column img {
     margin-top: 8px;
     vertical-align: middle;
     width: 100%;
   }
 
+.list-group-item {
+    padding-left: 4em;
+  }
 
-/* Menu list & Badges */
+/* Culture Page --> Carousel*/
 
-.badge{
-    padding: 10px 20px;
-}
-.green{
-    background-color: yellowgreen;
-}
 
-.coffee{
-    background: url(/images/menu/coffee_corner_banner.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-
+#Carousel{
+    background-color: #605856;
+    width: 70%;
+    height: 460px;
+    margin: 0 auto;
 }
 
-.eat{
-    background: url(/images/menu/salads_banner.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
 
-.treats{
-    background: url(/images/menu/dessert_cookies.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
 
-}
-
-/* Carousel */
-
-#Carousel .item{
+#culture .wrapper{
+    width: 80%;
+    margin: 0 auto;
+    padding: 50px;
     position: relative;
-    top: 100px;
-    height: 800px;
-    background-color: white;
    
 }
 
-.item img {
-    position: relative;
-    margin: 0 auto;
-    width: 50%;
-    top: 0;
-    left: 0;
-    min-height: 300px;
-
-}
-
 .carousel-control{
-    color: black;
+    color: white;
 }
+ 
+.item img {
+    object-fit: cover;
+    height: 460px !important;
+    margin: 0 auto;
+  }
+
+#culture .col-xs-4{
+    margin-top: 50px;
+    vertical-align: 20%;
+}
+
+.mdb-lightbox > h2{
+    padding: 0;
+    margin-top: 200px;
+}
+
+/* Locate us Map page */
+
+#address {
+    width: 100%;
+    height: 35%;
+}
+
+#location .wrapper{
+    position: relative;
+    margin: 0px 60px;
+    padding: 20px;
+}
+
+#location .img-responsive{
+    width: 70%;
+    margin: 0 auto;
+    padding: 30px;
+
+}
+
+#location .col-xs-4{
+    border: 1px solid #e86252 ;
+  
+}
+
+/* Contact page */
+
+section {
+    background-color: lightblue;
+    position: relative;
+    top: 150px;
+    margin: 0px 60px;
+    padding: 20px;
+}
+
+/* Footer */
+
+footer .col-sm-5, .col-sm-4, .col-sm-3{
+    background-color: #D0CCD0;
+    border:none;
+    padding-top: 10px;
+    margin-top: 10px;
+}
+
+.panel-footer{
+    background-color: white; 
+    border: none;
+    padding: 0px 0px 50px;
+}
+
+#footer-img{
+    width: 20%;}
+
+.list-unstyled li i{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.fas .footer{font-size: 12px;}
+
+
+
