--- a/style.css
+++ b/style.css
@@ -119,10 +119,7 @@
     color: white;
 }
 
-.carousel-caption h2{
-    color: white;
-    text-decoration: none;
-}
+
  
 .item img {
     object-fit: cover;
@@ -169,13 +166,11 @@
     width: 100%;
     margin: 0 auto;
     padding: 34px;
-
 }
 
 #location .col-xs-4{
     border: 1px solid #e86252;
     height: 150px;
-  
 }
 
 /* Contact page */
@@ -186,22 +181,18 @@
     background-repeat: no-repeat;
     margin-bottom: 24px;
     height: 700px;
+    width: 100%;
     
 }
 
 #contactpage .mb-4 {
     background-color: rgba(119, 119, 120, 0.8);
     border-radius: 25px;
-    width: 50%;
-    margin: 0 auto;
-    padding: 20px;
+    margin: 50px;
+    padding: 50px;
     position: relative;
-    top: 50px;
-}
-
-#contactpage .row{
-    padding-left: 70px;
-    margin: 0 auto;
+    top: 20px;
+    width: 50%; 
 }
 
 .label {
@@ -210,11 +201,11 @@
     }
 
 .custom-select{
-    width: 100%;
-    height: 34px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    height: 34px;
     margin-bottom: 34px;
+    width: 100%;
 }
 
 #contactpage p {
@@ -228,13 +219,12 @@
     border: 2px solid white;
     border-radius: 50px;
     color: white;
-    padding: 13px 55px;
+    padding: 12px 55px;
     margin-top: 40px;
     margin-left: 60px;
     text-align: center;
     font-size: 18px;
-    opacity: 1;
-    
+    opacity: 1;   
 }
 
 #contactpage .btn:hover{
