--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@
 /* Contact page */
 
 #contactpage .wrapper {
-    background-image: url("/images/culture/coffeebar_workingspace.jpg");
+    background-image: url(images/culture/coffeebar_workingspace.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     margin-bottom: 24px;
